--- a/UWMadison2017/StochMILP/farmer_Plasmo_dsp.ipynb
+++ b/UWMadison2017/StochMILP/farmer_Plasmo_dsp.ipynb
@@ -6,23 +6,70 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "ArgumentError: Plasmo not found in path",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: Plasmo not found in path",
-      "",
-      " in require at ./loading.jl:249"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding a good lower bound using Dual Decomposition...\n",
+      "Warning: Cut generation supports only SCIP.\n",
+      "Warning: Cut generation supports only SCIP.\n",
+      "Warning: Cut generation supports only SCIP.\n",
+      "Warning: Cut generation supports only SCIP.\n",
+      "Warning: Cut generation supports only SCIP.\n",
+      "\n",
+      "DUAL DECOMPOSITION ITERATION INFORMATION:\n",
+      "* master   = objective function value of the master problem.\n",
+      "* primobj  = best primal objective function value.\n",
+      "* dualobj  = best dual objective function value.\n",
+      "* a.gap(%) = Approximate gap between master and dualobj.\n",
+      "* d.gap(%) = Duality gap between primobj and dualobj.\n",
+      "* times    = wall clock time in seconds.\n",
+      "\n",
+      "  iter         master        primobj        dualobj  a.gap(%)  d.gap(%)    time\n",
+      " D   0  -1.129800e+05          Large  -1.138600e+05      0.78    100.00     0.0\n",
+      " D   1  -1.117773e+05          Large  -1.133200e+05      1.38    100.00     0.0\n",
+      " D   2  -1.104169e+05          Large  -1.117661e+05      1.22    100.00     0.0\n",
+      " D   3  -1.090516e+05          Large  -1.104106e+05      1.25    100.00     0.0\n",
+      " D   4  -1.076911e+05          Large  -1.090508e+05      1.26    100.00     0.0\n",
+      " D   5  -1.063309e+05          Large  -1.076908e+05      1.28    100.00     0.0\n",
+      " D   6  -1.049709e+05          Large  -1.063309e+05      1.30    100.00     0.0\n",
+      " D   7  -1.041897e+05          Large  -1.058539e+05      1.60    100.00     0.0\n",
+      " D   8  -1.028694e+05          Large  -1.041703e+05      1.26    100.00     0.0\n",
+      " D   9  -1.014975e+05          Large  -1.028531e+05      1.34    100.00     0.0\n",
+      "The iteration limit is reached.\n",
+      "Best lower bound -1.020137e+05, time elapsed: 0.00 sec.\n",
+      "presolving (3 rounds):\n",
+      " 0 deleted vars, 1 deleted constraints, 0 added constraints, 5 tightened bounds, 0 added holes, 0 changed sides, 0 changed coefficients\n",
+      " 0 implications, 0 cliques\n",
+      "presolved problem has 4 variables (0 bin, 0 int, 0 impl, 4 cont) and 2 constraints\n",
+      "\n",
+      " time | node  | left  |LP iter|LP it/n| mem |mdpt |frac |vars |cons |cols |rows |cuts |confs|strbr|  dualbound   | primalbound  |  gap   \n",
+      "* 0.0s|     1 |     0 |    10 |     - | 177k|   0 |   - |   4 |   2 |   4 |   8 |   7 |   0 |   0 |-1.001000e+05 |-1.001000e+05 |   0.00%\n",
+      "\n",
+      "SCIP Status        : problem is solved [optimal solution found]\n",
+      "Solving Time (sec) : 0.01\n",
+      "Solving Nodes      : 1\n",
+      "Primal Bound       : -1.00100000000000e+05 (2 solutions)\n",
+      "Dual Bound         : -1.00100000000000e+05\n",
+      "Gap                : 0.00 %\n",
+      "x: 1 dimensions:\n",
+      "[1] = 220.0000000000001\n",
+      "[2] = 79.99999999999997\n",
+      "[3] = 200.0\n",
+      "\n",
+      "-28100.00000000002\n",
+      "-64100.00000000002\n",
+      "-100100.00000000001\n",
+      "-136100.0\n",
+      "-172100.0\n",
+      "\n",
+      "obj -100100.00000000001\n"
      ]
     }
    ],
    "source": [
-    "using JuMP, Plasmo\n",
+    "using JuMP, Plasmo, MPI\n",
     "\n",
-    "# Comment if want to run serial \n",
-    "\n",
-    "#using MPI\n",
-    "#MPI.Init()\n",
+    "MPI.Init()\n",
     "\n",
     "# Model parameters\n",
     "\n",
@@ -98,28 +145,7 @@
     "println(\"\")\n",
     "println(\"obj \", getobjectivevalue(master))\n",
     "\n",
-    "# Comment if want to run serial\n",
-    "# MPI.Finalize();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "ArgumentError: Plasmo not found in path",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: Plasmo not found in path",
-      "",
-      " in require at ./loading.jl:249"
-     ]
-    }
-   ],
-   "source": [
-    "using Plasmo"
+    "MPI.Finalize();"
    ]
   },
   {
@@ -134,15 +160,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.5",
+   "display_name": "Julia 0.5.0",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.5"
+   "version": "0.5.0"
   }
  },
  "nbformat": 4,
