--- a/CBE450/Spring2018/SessionI/install_packages.ipynb
+++ b/CBE450/Spring2018/SessionI/install_packages.ipynb
@@ -1,79 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Stochastic Programming Short Course: Getting Started\n",
-    "Victor M. Zavala & Jordan Jalving, 2017\n",
-    "\n",
-    "This script sets up packages needed"
+    "Pkg.add(\"JuMP\")\n",
+    "Pkg.add(\"Ipopt\")\n",
+    "Pkg.add(\"Cbc\")\n",
+    "Pkg.add(\"Distributions\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Pkg.add(\"JuMP\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.add(\"Ipopt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.add(\"Cbc\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.add(\"Distributions\")  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.clone(\"https://github.com/jalving/Plasmo.jl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "using Plasmo\n",
     "using JuMP\n",
     "using Ipopt\n",
     "using Cbc\n",
