--- a/CBE450/Spring2018/SessionIII/Eg_16.4.ipynb
+++ b/CBE450/Spring2018/SessionIII/Eg_16.4.ipynb
@@ -2,271 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Example 16.4\n",
-    "#Import data, define sets and dictionary\n",
-    "Data = readcsv(\"Eg_16.4.csv\");\n",
-    "S = [\"HP\"];\n",
-    "W = [\"CW\"];\n",
-    "K = length(Data[1,:]) -1;\n",
-    "Hk = [[\"HP\"],[\"H1\"],[\"H1\",\"H2\"],[\"H1\",\"H2\"]];\n",
-    "Hk2 = [[\"HP\"],[\"HP\",\"H1\"],[\"HP\",\"H1\",\"H2\"],[\"HP\",\"H1\",\"H2\"]];\n",
-    "Ck = [[\"C1\"],[\"C1\"],[\"C1\",\"C2\"],[\"C2\",\"CW\"]];\n",
-    "H = [\"H1\",\"H2\",\"HP\"];\n",
-    "C = [\"C1\",\"C2\",\"CW\"];\n",
-    "Q = Dict((\"H1\",1) => 0.1)\n",
-    "for i in 1:length(Data[:,1])\n",
-    "    for j in 1:K\n",
-    "        Q[(Data[i,1],j)] = Data[i,j+1];\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Academic license - for non-commercial use only\n",
-      "Above pinch:\n",
-      "Match H1 and C1: \n",
-      "    Q(H1,C1,2) = 60.0\n",
-      "Match HP and C1: \n",
-      "    Q(HP,C1,1) = 30.0\n",
-      "    Q(HP,C1,2) = 30.0\n",
-      "Below pinch:\n",
-      "Match H1 and C1: \n",
-      "    Q(H1,C1,3) = 24.999999999999957\n",
-      "Match H1 and C2: \n",
-      "    Q(H1,C2,3) = 117.00000000000003\n",
-      "    Q(H1,C2,4) = 78.00000000000001\n",
-      "Match H2 and C1: \n",
-      "    Q(H2,C1,3) = 215.00000000000006\n",
-      "Match H2 and CW: \n",
-      "    Q(H2,CW,4) = 225.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Solution 1, on page 543\n",
+    "#Example 16.4 \n",
+    "#Using table 16.4\n",
     "using JuMP\n",
-    "using Gurobi\n",
-    "Ma = Model(solver = GurobiSolver(OutputFlag = 0));\n",
-    "@variable(Ma, Qkij[k=1:K,i in H,j in C] >= 0);\n",
-    "@variable(Ma, Rki[k=0:K,i in H] >= 0);\n",
-    "@variable(Ma, y[H,C,[\"a\",\"b\"]], Bin);\n",
-    "@objective(Ma, Min, sum(y));\n",
-    "@constraint(Ma, [i in H], Rki[0,i] == 0); \n",
-    "@constraint(Ma, [i in H], Rki[K,i] == 0); \n",
-    "@constraint(Ma, [k in 1:K, i in Hk2[k]], Rki[k,i] - Rki[k-1,i] + sum(Qkij[k,i,j] for j in Ck[k]) == Q[i,k]);\n",
-    "@constraint(Ma, [k in 1:K, j in Ck[k]], sum(Qkij[k,i,j] for i in Hk2[k]) == Q[j,k]);\n",
-    "@constraint(Ma, [i in H, j in C], sum(Qkij[k,i,j] for k in 1:2) - 10000*y[i,j,\"a\"] <= 0);\n",
-    "@constraint(Ma, [i in H, j in C], sum(Qkij[k,i,j] for k in 3:4) - 10000*y[i,j,\"b\"] <= 0);\n",
-    "# To force extra variables to be zero. This is optional in this example.\n",
-    "for k in 1:K\n",
-    "   for ii in H\n",
-    "        for jj in C\n",
-    "        if in(ii,Hk2[k]) == 0 || in(jj,Ck[k]) == 0\n",
-    "          @constraint(Ma, Qkij[k,ii,jj] == 0);\n",
-    "        end\n",
-    "        end\n",
-    "    end\n",
-    "    for ii in H\n",
-    "        if in(ii,Hk2[k]) == 0\n",
-    "          @constraint(Ma, Rki[k,ii] == 0);\n",
-    "        end\n",
-    "    end\n",
+    "using Cbc\n",
+    "m = Model(solver = CbcSolver())\n",
+    "@variables m begin\n",
+    "    Qs >= 0\n",
+    "    Qw >= 0\n",
+    "    Rs1 >= 0\n",
+    "    Qs11 >= 0\n",
+    "    R12 >= 0\n",
+    "    Q112 >= 0\n",
+    "    Rs2 >= 0\n",
+    "    Qs12 >= 0\n",
+    "    R13 >= 0\n",
+    "    Q113 >= 0\n",
+    "    Q123 >= 0\n",
+    "    R23 >= 0\n",
+    "    Q213 >= 0\n",
+    "    Q223 >= 0\n",
+    "    Rs3 >= 0\n",
+    "    Qs13 >= 0\n",
+    "    Qs23 >= 0\n",
+    "    Q124 >= 0\n",
+    "    Q1w4 >= 0\n",
+    "    Q224 >= 0\n",
+    "    Q2w4 >= 0\n",
+    "    Qs24 >= 0\n",
+    "    ys1, Bin\n",
+    "    ys2, Bin\n",
+    "    y11, Bin\n",
+    "    y12, Bin\n",
+    "    y21, Bin\n",
+    "    y22, Bin\n",
+    "    y1w, Bin\n",
+    "    y2w, Bin\n",
     "end\n",
-    "@constraint(Ma, Qkij[4,\"H2\",\"CW\"] >= 220); # To get the same solution as book\n",
-    "solve(Ma);\n",
-    "println(\"Above pinch:\");\n",
-    "for i in H\n",
-    "    for j in C\n",
-    "        if getvalue(y[i,j,\"a\"]) >= 0.1\n",
-    "            println(\"Match \",i,\" and \",j,\": \")\n",
-    "            for k in 1:2\n",
-    "            if getvalue(Qkij[k,i,j]) >= 0.1\n",
-    "                println(\"    Q\\(\"i,\",\",j,\",\",k,\"\\) = \",getvalue(Qkij[k,i,j]));\n",
-    "            end\n",
-    "            end\n",
-    "        end        \n",
-    "    end\n",
-    "end\n",
-    "println(\"Below pinch:\");\n",
-    "for i in H\n",
-    "    for j in C\n",
-    "        if getvalue(y[i,j,\"b\"]) >= 0.1\n",
-    "            println(\"Match \",i,\" and \",j,\": \")\n",
-    "            for k in 3:4\n",
-    "            if getvalue(Qkij[k,i,j]) >= 0.1\n",
-    "                println(\"    Q\\(\"i,\",\",j,\",\",k,\"\\) = \",getvalue(Qkij[k,i,j]));\n",
-    "            end\n",
-    "            end\n",
-    "        end        \n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Academic license - for non-commercial use only\n",
-      "Above pinch:\n",
-      "Match H1 and C1: \n",
-      "    Q(H1,C1,2) = 60.0\n",
-      "Match HP and C1: \n",
-      "    Q(HP,C1,1) = 30.0\n",
-      "    Q(HP,C1,2) = 30.0\n",
-      "Below pinch:\n",
-      "Match H1 and C2: \n",
-      "    Q(H1,C2,3) = 117.0\n",
-      "    Q(H1,C2,4) = 78.00000000000001\n",
-      "Match H1 and CW: \n",
-      "    Q(H1,CW,4) = 24.999999999999403\n",
-      "Match H2 and C1: \n",
-      "    Q(H2,C1,3) = 240.0\n",
-      "Match H2 and CW: \n",
-      "    Q(H2,CW,4) = 200.0000000000006\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Solution 2, on page 545\n",
-    "Mb = Model(solver = GurobiSolver(OutputFlag = 0));\n",
-    "@variable(Mb, Qkij[k=1:K,i in H,j in C] >= 0);\n",
-    "@variable(Mb, Rki[k=0:K,i in H] >= 0);\n",
-    "@variable(Mb, y[H,C,[\"a\",\"b\"]], Bin);\n",
-    "@objective(Mb, Min, sum(y));\n",
-    "@constraint(Mb, [i in H], Rki[0,i] == 0);\n",
-    "@constraint(Mb, [i in H], Rki[K,i] == 0);  \n",
-    "@constraint(Mb, [k in 1:K, i in Hk2[k]], Rki[k,i] - Rki[k-1,i] + sum(Qkij[k,i,j] for j in Ck[k]) == Q[i,k]);\n",
-    "@constraint(Mb, [k in 1:K, j in Ck[k]], sum(Qkij[k,i,j] for i in Hk2[k]) == Q[j,k]);\n",
-    "@constraint(Mb, [i in H, j in C], sum(Qkij[k,i,j] for k in 1:2) - 10000*y[i,j,\"a\"] <= 0);\n",
-    "@constraint(Mb, [i in H, j in C], sum(Qkij[k,i,j] for k in 3:K) - 10000*y[i,j,\"b\"] <= 0);\n",
-    "@constraint(Mb, sum(y[\"H1\",\"C1\",\"b\"]) == 0);\n",
-    "for k in 1:K\n",
-    "   for ii in H\n",
-    "        for jj in C\n",
-    "        if in(ii,Hk2[k]) == 0 || in(jj,Ck[k]) == 0\n",
-    "          @constraint(Mb, Qkij[k,ii,jj] == 0);\n",
-    "        end\n",
-    "        end\n",
-    "    end\n",
-    "    for ii in H\n",
-    "        if in(ii,Hk2[k]) == 0\n",
-    "          @constraint(Mb, Rki[k,ii] == 0);\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "solve(Mb);\n",
-    "println(\"Above pinch:\");\n",
-    "for i in H\n",
-    "    for j in C\n",
-    "        if getvalue(y[i,j,\"a\"]) >= 0.1\n",
-    "            println(\"Match \",i,\" and \",j,\": \")\n",
-    "            for k in 1:2\n",
-    "            if getvalue(Qkij[k,i,j]) >= 0.1\n",
-    "                println(\"    Q\\(\"i,\",\",j,\",\",k,\"\\) = \",getvalue(Qkij[k,i,j]));\n",
-    "            end\n",
-    "            end\n",
-    "        end        \n",
-    "    end\n",
-    "end\n",
-    "println(\"Below pinch:\");\n",
-    "for i in H\n",
-    "    for j in C\n",
-    "        if getvalue(y[i,j,\"b\"]) >= 0.1\n",
-    "            println(\"Match \",i,\" and \",j,\": \")\n",
-    "            for k in 3:4\n",
-    "            if getvalue(Qkij[k,i,j]) >= 0.1\n",
-    "                println(\"    Q\\(\"i,\",\",j,\",\",k,\"\\) = \",getvalue(Qkij[k,i,j]));\n",
-    "            end\n",
-    "            end\n",
-    "        end        \n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Academic license - for non-commercial use only\n",
-      "Match H1 and C1: \n",
-      "    Q(H1,C1,2) = 60.0\n",
-      "    Q(H1,C1,3) = 24.999999999999915\n",
-      "Match H1 and C2: \n",
-      "    Q(H1,C2,3) = 117.0\n",
-      "    Q(H1,C2,4) = 78.0\n",
-      "Match H2 and C1: \n",
-      "    Q(H2,C1,3) = 215.00000000000009\n",
-      "Match H2 and CW: \n",
-      "    Q(H2,CW,4) = 225.0\n",
-      "Match HP and C1: \n",
-      "    Q(HP,C1,1) = 30.0\n",
-      "    Q(HP,C1,2) = 30.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Solution 3 - no pinch partition, on page 545-546\n",
-    "Mc = Model(solver = GurobiSolver(OutputFlag = 0));\n",
-    "@variable(Mc, Qkij[k=1:K,i in H,j in C] >= 0);\n",
-    "@variable(Mc, Rki[k=0:K,i in H] >= 0);\n",
-    "@variable(Mc, y[H,C], Bin);\n",
-    "@objective(Mc, Min, sum(y));\n",
-    "@constraint(Mc, [i in H], Rki[2,i] == 0);\n",
-    "@constraint(Mc, [i in H], Rki[K,i] == 0);  \n",
-    "@constraint(Mc, [k in 1:K, i in Hk2[k]], Rki[k,i] - Rki[k-1,i] + sum(Qkij[k,i,j] for j in Ck[k]) == Q[i,k]);\n",
-    "@constraint(Mc, [k in 1:K, j in Ck[k]], sum(Qkij[k,i,j] for i in Hk2[k]) == Q[j,k]);\n",
-    "@constraint(Mc, [i in H, j in C], sum(Qkij[k,i,j] for k in 1:K) - 10000*y[i,j] <= 0);\n",
-    "for k in 1:K\n",
-    "   for ii in H\n",
-    "        for jj in C\n",
-    "        if in(ii,Hk2[k]) == 0 || in(jj,Ck[k]) == 0\n",
-    "          @constraint(Mc, Qkij[k,ii,jj] == 0);\n",
-    "        end\n",
-    "        end\n",
-    "    end\n",
-    "    for ii in H\n",
-    "        if in(ii,Hk2[k]) == 0\n",
-    "          @constraint(Mc, Rki[k,ii] == 0);\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "solve(Mc);\n",
-    "for i in H\n",
-    "    for j in C\n",
-    "        if getvalue(y[i,j]) >= 0.1\n",
-    "            println(\"Match \",i,\" and \",j,\": \")\n",
-    "            for k in 1:4\n",
-    "            if getvalue(Qkij[k,i,j]) >= 0.1\n",
-    "                println(\"    Q\\(\"i,\",\",j,\",\",k,\"\\) = \",getvalue(Qkij[k,i,j]));\n",
-    "            end\n",
-    "            end\n",
-    "        end        \n",
-    "    end\n",
-    "end"
+    "@constraint(m, Rs1 + Qs11 -Qs ==0);\n",
+    "@constraint(m, Qs11 == 30);\n",
+    "@constraint(m, R12 +Q112 == 60);\n",
+    "@constraint(m, Rs2-Rs1+Qs12 == 0);\n",
+    "@constraint(m, Qs12 +Q112 == 90);\n",
+    "@constraint(m, R13-R12+Q113+Q123 == 160);\n",
+    "@constraint(m, R23 +Q213+Q223==320);\n",
+    "@constraint(m, Rs3-Rs2+Qs13+Qs23 == 0);\n",
+    "@constraint(m, Q113 +Q213+Qs13 == 240);\n",
+    "@constraint(m, Q123+Q223+Qs23 == 117);\n",
+    "@constraint(m, -R13+Q124+Q1w4 == 60);\n",
+    "@constraint(m, -R23+Q224+Q2w4 == 120);\n",
+    "@constraint(m, -Rs3+Qs24 == 0);\n",
+    "@constraint(m, Q124+Q224+Qs24 == 78);\n",
+    "@constraint(m, Q1w4+Q2w4-Qw == 0);\n",
+    "@constraint(m, Q112 +Q113 <= 220*y11);\n",
+    "@constraint(m, Qs11+Qs12+Qs13 <= 60*ys1);\n",
+    "@constraint(m, Qs24 <= 60*ys2);\n",
+    "@constraint(m, Q123+Q124 <= 195*y12);\n",
+    "@constraint(m, Q213 <= 240*y21);\n",
+    "@constraint(m, Q223+Q224 <= 195*y22);\n",
+    "@constraint(m, Q1w4 <= 280*y1w);\n",
+    "@constraint(m, Q2w4 <= 440*y2w);\n",
+    "@constraint(m, Qs == 60);\n",
+    "@constraint(m, Qw == 225);\n",
+    "@objective(m, Min, ys1+ys2+y11+y12+y21+y22+y1w+y2w);\n",
+    "solve(m)\n",
+    "println(\"Minimun number of matches = \", getobjectivevalue(m))"
    ]
   }
  ],
