--- a/WisconsinGraph/DNR_data/DNR_data_filter.ipynb
+++ b/WisconsinGraph/DNR_data/DNR_data_filter.ipynb
@@ -99,10 +99,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 871/871 [01:38<00:00,  8.80it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Read in NHDPlusV2 waterbodies\n",
+    "WILakes = pd.read_pickle(\"../graph_construction/WILakes.df\")\n",
+    "\n",
     "# Read in the hydro waterbodies shapefiles and set the crs to match the EPSG code of the NHDPlusV2 dataset\n",
     "hw = gpd.GeoDataFrame.from_file(\"Hydro_Waterbodies/24k_Hydro_Waterbodies_(Open_Water).shp\")\n",
     "hw = hw.to_crs(\"EPSG:4326\")\n",
@@ -166,6 +184,13 @@
     "# Save the new lake_index dataframe that now contains COMIDs\n",
     "lake_index.to_csv(\"lake_index_WBIC_COMID.csv\",index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
