Added comments to code
Former-commit-id: 7c7d609f24dca645eff978d9892283a191aad3e5

--- a/WisconsinGraph/case_studies/case_study_1.ipynb
+++ b/WisconsinGraph/case_studies/case_study_1.ipynb
@@ -19,15 +19,6 @@
     "from shapely.geometry import MultiPoint\n",
     "import matplotlib.dates as mdates\n",
     "import math\n",
-    "# from shapely.geometry import Polygon as Poly\n",
-    "\n",
-    "pd.options.display.max_columns = 250\n",
-    "pd.options.display.max_rows=150\n",
-    "\n",
-    "conda_file_dir = conda.__file__\n",
-    "conda_dir = conda_file_dir.split('lib')[0]\n",
-    "proj_lib = os.path.join(os.path.join(conda_dir, 'share'), 'proj')\n",
-    "os.environ[\"PROJ_LIB\"] = proj_lib\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm\n",
@@ -63,6 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in the needed \n",
+    "\n",
     "WILakes  = pd.read_pickle(\"../graph_construction/WILakes.df\")\n",
     "WIRivers = pd.read_pickle(\"../graph_construction/WIRivers.df\")\n",
     "agland   = pd.read_pickle(\"../graph_construction/agland.df\")\n",
