--- a/VirtualLinks/case_studies.ipynb
+++ b/VirtualLinks/case_studies.ipynb
@@ -609,15 +609,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add space-time virtual links\n",
     "dcnodes = [4,14,21,23,26,30]\n",
     "vls = Dict{Int64, Dict}()\n",
-    "# vcap = 0.01\n",
-    "vcap = 0.0\n",
+    "vcap = 0.01\n",
+    "# vcap = 0.0\n",
     "dcap = 0.5\n",
     "\n",
     "ct = 1\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -761,65 +761,17 @@
       "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (mac64[arm])\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 15264 rows, 13992 columns and 86016 nonzeros\n",
-      "Model fingerprint: 0x196640cb\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 3e+01]\n",
       "  Objective range  [1e-01, 2e+04]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [3e-02, 4e+00]\n",
       "\n",
-      "Concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
-      "Showing barrier log only...\n",
-      "\n",
-      "Presolve removed 14304 rows and 11592 columns\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 960 rows, 2400 columns, 6768 nonzeros\n",
-      "\n",
-      "Ordering time: 0.00s\n",
-      "\n",
-      "Barrier statistics:\n",
-      " AA' NZ     : 2.784e+03\n",
-      " Factor NZ  : 9.576e+03 (roughly 1 MB of memory)\n",
-      " Factor Ops : 1.152e+05 (less than 1 second per iteration)\n",
-      " Threads    : 1\n",
-      "\n",
-      "                  Objective                Residual\n",
-      "Iter       Primal          Dual         Primal    Dual     Compl     Time\n",
-      "   0  -4.77832923e+06 -3.24895858e+07  4.74e-01 8.73e+03  1.52e+04     0s\n",
-      "   1  -9.72678702e+05 -1.27703129e+07  2.19e-02 3.49e+03  2.64e+03     0s\n",
-      "   2  -1.43071019e+06 -2.96694974e+06  1.52e-05 5.10e+01  3.24e+02     0s\n",
-      "   3  -1.78336568e+06 -2.00177590e+06  1.94e-06 7.28e-12  4.58e+01     0s\n",
-      "   4  -1.83151511e+06 -1.85048083e+06  2.56e-07 7.28e-12  3.97e+00     0s\n",
-      "   5  -1.83756535e+06 -1.83970457e+06  5.75e-08 7.28e-12  4.48e-01     0s\n",
-      "   6  -1.83906083e+06 -1.83943384e+06  8.82e-09 5.60e-12  7.81e-02     0s\n",
-      "   7  -1.83934166e+06 -1.83935705e+06  2.12e-10 8.73e-12  3.22e-03     0s\n",
-      "   8  -1.83935025e+06 -1.83935248e+06  2.78e-11 7.28e-12  4.66e-04     0s\n",
-      "   9  -1.83935139e+06 -1.83935151e+06  2.64e-12 8.81e-12  2.49e-05     0s\n",
-      "  10  -1.83935146e+06 -1.83935146e+06  9.35e-13 9.09e-12  3.00e-07     0s\n",
-      "  11  -1.83935146e+06 -1.83935146e+06  3.18e-13 8.73e-12  3.34e-10     0s\n",
-      "\n",
-      "Barrier solved model in 11 iterations and 0.02 seconds (0.02 work units)\n",
-      "Optimal objective -1.83935146e+06\n",
-      "\n",
-      "Crossover log...\n",
-      "\n",
-      "       2 DPushes remaining with DInf 0.0000000e+00                 0s\n",
-      "       0 DPushes remaining with DInf 0.0000000e+00                 0s\n",
-      "\n",
-      "       0 PPushes remaining with PInf 0.0000000e+00                 0s\n",
-      "\n",
-      "  Push phase complete: Pinf 0.0000000e+00, Dinf 5.2750693e-10      0s\n",
-      "\n",
-      "Extra simplex iterations after uncrush: 47\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "      52   -1.8393515e+06   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved with barrier\n",
-      "Solved in 52 iterations and 0.03 seconds (0.03 work units)\n",
+      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
       "Optimal objective -1.839351461e+06\n",
       "\n",
-      "User-callback calls 193, time in user-callback 0.00 sec\n",
-      "  1.254210 seconds (5.90 M allocations: 435.702 MiB, 6.49% gc time, 95.76% compilation time)\n"
+      "User-callback calls 12, time in user-callback 0.00 sec\n",
+      "  0.000209 seconds (17 allocations: 496 bytes)\n"
      ]
     }
    ],
