Updated script to download data
Former-commit-id: beeed64f192d315552ded514af550ac06a3c8ca9

--- a/HydroGraphs/get_and_unpack_data.ipynb
+++ b/HydroGraphs/get_and_unpack_data.ipynb
@@ -19,6 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download agricultural land data\n",
+    "\n",
     "agland_url = \"https://data.nal.usda.gov/system/files/WI_ACPFfields2019.zip\"\n",
     "path = os.getcwd()\n",
     "wget.download(agland_url, out = path)"
@@ -30,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unpack data and remove zip file\n",
+    "\n",
     "agland_path = path + \"/graph_construction/agland\"\n",
     "\n",
     "with zipfile.ZipFile(\"WI_ACPFfields2019.zip\", 'r') as zipObj:\n",
@@ -53,6 +57,8 @@
    },
    "outputs": [],
    "source": [
+    "# Download HUC04 NHDPlusV2 data\n",
+    "\n",
     "watershed4_url = \"https://edap-ow-data-commons.s3.amazonaws.com/NHDPlusV21/Data/NHDPlusGL/NHDPlusV21_GL_04_NHDSnapshot_08.7z\"\n",
     "wget.download(watershed4_url, out = path)"
    ]
@@ -63,17 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract data from .7z file\n",
+    "\n",
     "watershed4_path = path + \"/graph_construction/lakes_rivers/Watershed4/\"\n",
     "with py7zr.SevenZipFile(\"NHDPlusV21_GL_04_NHDSnapshot_08.7z\", 'r') as z:\n",
-    "    z.extractall(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    z.extractall(path)\n",
+    "\n",
+    "# Move data to proper folder, and then delete the unnecessary unpacked data and the .7z file\n",
+    "\n",
     "NHDPlus4_path = path + \"/NHDPlusGL/NHDPlus04/NHDSnapshot/Hydrography/\"\n",
     "\n",
     "shutil.move(NHDPlus4_path + \"NHDFlowline.shp\", watershed4_path)\n",
@@ -96,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download HUC07 NHDPlusV2 data\n",
+    "\n",
     "watershed7_url = \"https://edap-ow-data-commons.s3.amazonaws.com/NHDPlusV21/Data/NHDPlusMS/NHDPlus07/NHDPlusV21_MS_07_NHDSnapshot_08.7z\"\n",
     "wget.download(watershed7_url, out = path)"
    ]
@@ -108,9 +113,13 @@
    },
    "outputs": [],
    "source": [
+    "# Extract data from .7z file\n",
+    "\n",
     "watershed7_path = path + \"/graph_construction/lakes_rivers/Watershed7/\"\n",
     "with py7zr.SevenZipFile(\"NHDPlusV21_MS_07_NHDSnapshot_08.7z\", 'r') as z:\n",
     "    z.extractall(path)\n",
+    "    \n",
+    "# Move data to proper folder, and then delete the unnecessary unpacked data and the .7z file\n",
     "    \n",
     "NHDPlus7_path = path + \"/NHDPlusMS/NHDPlus07/NHDSnapshot/Hydrography/\"\n",
     "\n",
@@ -133,6 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download the NHDPlusV2 Attributes to get file that contains the to-from comid lists for HUC 04\n",
+    "\n",
     "watershed4_url_attributes = \"https://edap-ow-data-commons.s3.amazonaws.com/NHDPlusV21/Data/NHDPlusGL/NHDPlusV21_GL_04_NHDPlusAttributes_14.7z\"\n",
     "wget.download(watershed4_url_attributes, out = path)"
    ]
@@ -143,10 +154,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract data from the .7z file\n",
+    "\n",
     "watershed4_path = path + \"/graph_construction/lakes_rivers/Watershed4/\"\n",
     "with py7zr.SevenZipFile(\"NHDPlusV21_GL_04_NHDPlusAttributes_14.7z\", 'r') as z:\n",
     "    z.extractall(path)\n",
-    "    \n",
+    "\n",
+    "# Move data to proper folder, and then delete the unnecessary unpacked data and the .7z file\n",
+    "\n",
     "NHDPlus4_attributes_path = path + \"/NHDPlusGL/NHDPlus04/NHDPlusAttributes/\"\n",
     "\n",
     "shutil.move(NHDPlus4_attributes_path + \"PlusFlow.dbf\", watershed4_path)\n",
@@ -161,6 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download the NHDPlusV2 Attributes to get file that contains the to-from comid lists for HUC 07\n",
+    "\n",
     "watershed7_url_attributes = \"https://edap-ow-data-commons.s3.amazonaws.com/NHDPlusV21/Data/NHDPlusMS/NHDPlus07/NHDPlusV21_MS_07_NHDPlusAttributes_10.7z\"\n",
     "wget.download(watershed7_url_attributes, out = path)"
    ]
@@ -171,9 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract data from the .7z file\n",
+    "\n",
     "watershed7_path = path + \"/graph_construction/lakes_rivers/Watershed7/\"\n",
     "with py7zr.SevenZipFile(\"NHDPlusV21_MS_07_NHDPlusAttributes_10.7z\", 'r') as z:\n",
     "    z.extractall(path)\n",
+    "    \n",
+    "# Move data to proper folder, and then delete the unnecessary unpacked data and the .7z file\n",
     "    \n",
     "NHDPlus7_attributes_path = path + \"/NHDPlusMS/NHDPlus07/NHDPlusAttributes/\"\n",
     "\n",
@@ -189,6 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download the Watershed Boundary Dataset for HUC04\n",
+    "\n",
     "wbd4_url = \"https://prd-tnm.s3.amazonaws.com/StagedProducts/Hydrography/WBD/HU2/Shape/WBD_04_HU2_Shape.zip\"\n",
     "wget.download(wbd4_url, out = path)"
    ]
@@ -199,6 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unpack the dataset, move the necessary files, and remove the remaining files and zip file\n",
+    "\n",
     "watershed4_path = path + \"/graph_construction/lakes_rivers/Watershed4/\"\n",
     "\n",
     "with zipfile.ZipFile(\"WBD_04_HU2_Shape.zip\", 'r') as zipObj:\n",
@@ -230,6 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download the Watershed Boundary Dataset for HUC07\n",
+    "\n",
     "wbd7_url = \"https://prd-tnm.s3.amazonaws.com/StagedProducts/Hydrography/WBD/HU2/Shape/WBD_07_HU2_Shape.zip\"\n",
     "wget.download(wbd7_url, out = path)"
    ]
@@ -240,6 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unpack the dataset, move the necessary files, and remove the remaining files and zip file\n",
+    "\n",
     "watershed7_path = path + \"/graph_construction/lakes_rivers/Watershed7/\"\n",
     "\n",
     "with zipfile.ZipFile(\"WBD_07_HU2_Shape.zip\", 'r') as zipObj:\n",
@@ -271,6 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unpack the zipfile with WILakes.df and WIRivers.df\n",
+    "\n",
     "graph_construction_path = path + \"/graph_construction\"\n",
     "\n",
     "with zipfile.ZipFile(graph_construction_path + \"/WI_lakes_rivers.zip\", \"r\") as zipObj:\n",
@@ -284,6 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unpack the zipfile with the Hydro Waterbodies dataset for Wisconsin\n",
+    "\n",
     "Hydro_path = path + \"/DNR_data/Hydro_Waterbodies\"\n",
     "\n",
     "with zipfile.ZipFile(Hydro_path + \"/24k_Hydro_Waterbodies_(Open_Water).zip\", \"r\") as zipObj:\n",
